--- a/1idhtml.html
+++ b/1idhtml.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('test.jpg');
+  background-image: url('1idlogo.png');
   min-height: 100%;
 }
 
@@ -36,7 +36,7 @@ body, html {
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url('test.jpg');
+  background-image: url('test2.jpg');
   min-height: 400px;
 }
 
@@ -61,10 +61,6 @@ body, html {
 
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
-  <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity w3-hide-small">1st Infantry Division</span>
-    <span class="w3-center w3-padding-large w3-black w3-hide-xlarge w3-hide-xxlarge w3-hide-xxxlarge w3-hide-medium w3-hide-large w3-wide w3-animate-opacity w3-small">1st Infantry Division</span>
-  </div>
 </div>
 
 
