--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@ body, html {
 
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
   <div class="w3-third w3-section">
-    <span class="w3-xlarge">Infantry</span><br>
+    <span class="w3-xlarge"><b>Infantry</b></span><br>
   </div>
   <div class="w3-third w3-section">
-    <span class="w3-xlarge">Armor</span><br>
+    <span class="w3-xlarge"><b>Armor</b></span><br>
   </div>
   <div class="w3-third w3-section">
-    <span class="w3-xlarge">Aviation</span><br>
+    <span class="w3-xlarge"><b>Aviation</b></span><br>
   </div>
 </div>
 
