--- a/index.html
+++ b/index.html
@@ -69,15 +69,13 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h2 class="w3-center"><u>ABOUT US</u></h2>
   <h4>Welcome to the 1st Infantry Division! We are an international Mil-Sim light with all the tactics, structure, and skill of a mil-sim without the yes sir no sir hassle. Our mission is to be the best of the best while having the most fun along the way. We welcome anyone with a desire to play the game the right way with open arms. We are a mature, and understanding community with no mandatory attendance at training's or events. We run multiple community wide events and operations from 1 life events, death races, competetive matches against other teams, to internal 1ID scrims between Squads or against other units. </h3>
-  <br>
-  <h4>New recruits will complete a Basic Training which aims to test teamwork, comraderie and basic gun play. It is not required to be a good shot. As long as recruits have a positive attitude and are willing to play as a team, anyone is welcome. Afterwards, recruits will be placed in a regiment of their choosing where and will be considering full members of 1ID.</h3>
-
+  
 </div>
 
 <!-- Third Parallax Image with Portfolio Text -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">REGIMENTS</span>
+     <span class="w3-xxlarge w3-text-white w3-wide"><b>REGIMENTS</b></span>
   </div>
 </div>
 
