--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body, html {
 
 
 <!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+<div class="bgimg-1 w3-display-container" id="home">
 </div>
 
 
@@ -93,17 +93,23 @@ body, html {
 
 
 
-<!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-64" id="contact">
+<!-- Container (Where to Join) -->
+<div class="w3-content w3-container w3-padding-64" id="discord">
   <h2 class="w3-center"><u>WHERE TO JOIN</u></h2>
-  <p class="w3-center"><em>Click below for more information!</em></p>
+  <p class="w3-center"><em>Join the Discord for more information!</em></p>
 
   <div class="w3-padding-32 w3-center">
     <a href="https://discord.gg/PdhzsnD9"><img class="discordlogo" src="Discord-Logo.png"></img></a>
     
   </div>
 </div>
- 
+<hr />
+ <!-- Container (Seeding) -->
+<div class="w3-content w3-container w3-padding-64" id="rules">
+  <h2 class="w3-center"><u>SERVER RULES</u></h2>
+  <p class="w3-center"><em>Maybe add some seeding/server rules here too. </em></p>
+</div>
+
 <script>
 // Modal Image Gallery
 function onClick(element) {
