--- a/index.html
+++ b/index.html
@@ -91,8 +91,20 @@ body, html {
   </div>
 </div>
 
+<div class="w3-container w3-row w3-center w3-padding-16">
+  <div class="w3-third w3-section">
+    <span class="w3-large"><b>Some generic info about how the Infantry regiment works.</b></span><br>
+  </div>
+  <div class="w3-third w3-section">
+    <span class="w3-large"><b>Some generic info about how the Armor regiment works.</b></span><br>
+  </div>
+  <div class="w3-third w3-section">
+    <span class="w3-large"><b>Some generic info about how the Aviation regiment works.</b></span><br>
+  </div>
+</div>
 
 
+<hr />
 <!-- Container (Where to Join) -->
 <div class="w3-content w3-container w3-padding-64" id="discord">
   <h2 class="w3-center"><u>WHERE TO JOIN</u></h2>
