--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h2 class="w3-center"><u>ABOUT US</u></h2>
   <h4>Welcome to the 1st Infantry Division! We are an international Mil-Sim light with all the tactics, structure, and skill of a mil-sim without the yes sir no sir hassle. Our mission is to be the best of the best while having the most fun along the way. We welcome anyone with a desire to play the game the right way with open arms. We are a mature, and understanding community with no mandatory attendance at training's or events. We run multiple community wide events and operations from 1 life events, death races, competetive matches against other teams, to internal 1ID scrims between Squads or against other units. </h3>
-  
+  <h4>Add some info about how joining/training works and segway into what regiments they can join afterwards.</h4>
 </div>
 
 <!-- Third Parallax Image with Portfolio Text -->
