--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body, html {
 
 /* Discord Logo */
 .discordlogo {
-  width: 40%;
+  width: 25%;
 }
 
 .w3-wide {letter-spacing: 10px;}
@@ -69,7 +69,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h2 class="w3-center"><u>ABOUT US</u></h2>
   <h4>Welcome to the 1st Infantry Division! We are an international Mil-Sim light with all the tactics, structure, and skill of a mil-sim without the yes sir no sir hassle. Our mission is to be the best of the best while having the most fun along the way. We welcome anyone with a desire to play the game the right way with open arms. We are a mature, and understanding community with no mandatory attendance at training's or events. We run multiple community wide events and operations from 1 life events, death races, competetive matches against other teams, to internal 1ID scrims between Squads or against other units. </h3>
-  <h4>Add some info about how joining/training works and segway into what regiments they can join afterwards.</h4>
+  <h4>After a new recruit indicates they'd like to join on our Discord server, they will be scheduled for basic training. Basic training ensures all members have a basic understanding of the game and have an idea of what to expect when operating in 1ID. This training takes about 15 to 20 minutes. Afterwards recruits will be promoted and be considered a member of 1ID.</h4>
 </div>
 
 <!-- Third Parallax Image with Portfolio Text -->
