Adding web responsiveness for phones/tablets

--- a/index.html
+++ b/index.html
@@ -28,12 +28,6 @@ body, html {
   min-height: 100%;
 }
 
-/* Second image (Portfolio) */
-.bgimg-2 {
-  background-image: url('test.jpg');
-  min-height: 400px;
-}
-
 /* Third image (Contact) */
 .bgimg-3 {
   background-image: url('test2.jpg');
@@ -49,10 +43,22 @@ body, html {
 .w3-hover-opacity {cursor: pointer;}
 
 /* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1600px) {
-  .bgimg-1, .bgimg-2, .bgimg-3 {
+@media only screen and (max-width: 1400px) {
+  .bgimg-2, .bgimg-3 {
     background-attachment: scroll;
     min-height: 400px;
+  }
+
+  .bgimg-1 {
+    background-image: url('Avatar.png');
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .bgimg-1 {
+    max-height: 50%;
+    min-height: 50%;
+    background-attachment: scroll;
   }
 }
 </style>
@@ -154,4 +160,4 @@ function toggleFunction() {
 </script>
 
 </body>
-</html>y
+</html>
