--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body, html {
 .w3-hover-opacity {cursor: pointer;}
 
 /* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-width: 1400px) {
+@media only screen and (max-device-width: 1400px) {
   .bgimg-2, .bgimg-3 {
     background-attachment: scroll;
     min-height: 400px;
@@ -54,7 +54,7 @@ body, html {
   }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-device-width: 700px) {
   .bgimg-1 {
     max-height: 50%;
     min-height: 50%;
