--- a/index.html
+++ b/index.html
@@ -99,13 +99,10 @@ body, html {
 
 <div class="w3-container w3-row w3-center w3-padding-16">
   <div class="w3-third w3-section">
-    <span class="w3-large"><b>Some generic info about how the Infantry regiment works.</b></span><br>
   </div>
   <div class="w3-third w3-section">
-    <span class="w3-large"><b>Some generic info about how the Armor regiment works.</b></span><br>
   </div>
   <div class="w3-third w3-section">
-    <span class="w3-large"><b>Some generic info about how the Aviation regiment works.</b></span><br>
   </div>
 </div>
 
@@ -117,16 +114,10 @@ body, html {
   <p class="w3-center"><em>Join the Discord for more information!</em></p>
 
   <div class="w3-padding-32 w3-center">
-    <a href="https://discord.gg/PdhzsnD9"><img class="discordlogo" src="Discord-Logo.png"></img></a>
-    
+    <a href="https://discord.gg/mNfRdMBsmS"><img class="discordlogo" src="Discord-Logo.png"></img></a>
   </div>
 </div>
-<hr />
- <!-- Container (Seeding) -->
-<div class="w3-content w3-container w3-padding-64" id="rules">
-  <h2 class="w3-center"><u>SERVER RULES</u></h2>
-  <p class="w3-center"><em>Maybe add some seeding/server rules here too. </em></p>
-</div>
+
 
 <script>
 // Modal Image Gallery
