--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ body, html {
   <h4>Welcome to the 1st Infantry Division! We are an international Mil-Sim light with all the tactics, structure, and skill of a mil-sim without the yes sir no sir hassle. Our mission is to be the best of the best while having the most fun along the way. We welcome anyone with a desire to play the game the right way with open arms. We are a mature, and understanding community with no mandatory attendance at training's or events. We run multiple community wide events and operations from 1 life events, death races, competetive matches against other teams, to internal 1ID scrims between Squads or against other units. </h3>
   <h4>After a new recruit indicates they'd like to join on our Discord server, they will be scheduled for basic training. Basic training ensures all members have a basic understanding of the game and have an idea of what to expect when operating in 1ID. This training takes about 15 to 20 minutes. Afterwards recruits will be promoted and be considered a member of 1ID.</h4>
   <br >
-  <p class="w3-center w3-large">If you're interesting in joining or want to come hang out, <a href="https://discord.gg/Pan4yK959F">join us at our Discord!</a></p>
+  <p class="w3-center w3-large">If you're interested in joining or want to come hang out, <a href="https://discord.gg/Pan4yK959F">join us at our Discord!</a></p>
   <p class="w3-center w3-large">If you want to support us, we have a <a href="https://www.patreon.com/1ID/posts">Patreon</a> and <a href="https://www.paypal.com/pools/c/8wQQHzXwod ">PayPal</a>. </p>
 </div>
 
