Removing icon from Gallery in Navbar

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#home" class="w3-bar-item w3-button hover">HOME</a>
-      <a href="pages/gallery.html" class="w3-bar-item w3-button hover"><i class="fa fa-question-circle"></i>GALLERY</a>
+      <a href="pages/gallery.html" class="w3-bar-item w3-button hover"></i>GALLERY</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
