--- a/gallery.html
+++ b/gallery.html
@@ -71,7 +71,7 @@ body, html {
   top: 90%;
   width: auto;
   padding: 16px;
-  color: hotpink;
+  color: white;
   font-weight: bold;
   font-size: 20px;
   border-radius: 0 3px 3px 0;
@@ -151,7 +151,9 @@ function plusSlides(n) {
 
 // Thumbnail image controls
 function currentSlide(n) {
-  showSlides(slideIndex = n);
+  slideIndex = n
+  showSlides(slideIndex);
+  showThumbnails(slideIndex)
 }
 
 function showSlides(n) {
@@ -178,17 +180,25 @@ function plusThumbnails(n) {
   showThumbnails(slideIndex += n);
 }
 
+function backThumbnails(n) {
+  if (slideIndex > 1){
+    showThumbnails(slideIndex += n);
+  }
+}
+
 function showThumbnails() {
   var i;
   var slides = document.getElementsByClassName("myThumbnails");
-  for (i = 0; i < slides.length; i++) {
-    if (i < 6) {
-      slides[i].style.display = "block";
-    };
-    if (i >= 6) {
+  if (slideIndex < slides.length){
+    //Make all slides hidden by default
+    for (i = 0; i < slides.length; i++) {
       slides[i].style.display = "none";
-    };
+    }
+    for (i=slideIndex-1; i < (slideIndex+5); i++) {
+      slides[i].style.display = "block";
+    }
   }
+  
 }
 </script>
 <body>
@@ -199,47 +209,47 @@ function showThumbnails() {
   <!-- Full-width images with number text -->
   <div class="mySlides" style="display: block;">
     <div class="numbertext">1 / 9</div>
-      <img src="../images/user-submitted/1.png" style="width:100%">
+      <img src="images/user-submitted/1.png" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">2 / 9</div>
-      <img src="../images/user-submitted/2.png" style="width:100%">
+      <img src="images/user-submitted/2.png" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">3 / 9</div>
-      <img src="../images/user-submitted/3.png" style="width:100%">
+      <img src="images/user-submitted/3.png" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">4 / 9</div>
-      <img src="../images/user-submitted/4.jpg" style="width:100%">
+      <img src="images/user-submitted/4.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">5 / 9</div>
-      <img src="../images/user-submitted/5.png" style="width:100%">
+      <img src="images/user-submitted/5.png" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">6 / 9</div>
-      <img src="../images/user-submitted/6.png" style="width:100%">
+      <img src="images/user-submitted/6.png" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">7 / 9</div>
-      <img src="../images/user-submitted/7.png" style="width:100%">
+      <img src="images/user-submitted/7.png" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">8 / 9</div>
-      <img src="../images/user-submitted/8.jpg" style="width:100%">
+      <img src="images/user-submitted/8.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">9 / 9</div>
-      <img src="../images/user-submitted/9.png" style="width:100%">
+      <img src="images/user-submitted/9.png" style="width:100%">
   </div>
 
   <!-- Next and previous buttons -->
@@ -254,34 +264,34 @@ function showThumbnails() {
   <!-- Thumbnail images -->
   <div class="row">
     <div class="column myThumbnails">
-      <img class="demo cursor" src="../images/user-submitted/1.png" style="width:99%" onclick="currentSlide(1)" alt="The Woods">
+      <img class="demo cursor" src="images/user-submitted/1.png" style="width:99%" onclick="currentSlide(1)" alt="The Woods">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="../images/user-submitted/2.png" style="width:99%" onclick="currentSlide(2)" alt="Cinque Terre">
+      <img class="demo cursor" src="images/user-submitted/2.png" style="width:99%" onclick="currentSlide(2)" alt="Cinque Terre">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="../images/user-submitted/3.png" style="width:99%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      <img class="demo cursor" src="images/user-submitted/3.png" style="width:99%" onclick="currentSlide(3)" alt="Mountains and fjords">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="../images/user-submitted/4.jpg" style="width:99%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="images/user-submitted/4.jpg" style="width:99%" onclick="currentSlide(4)" alt="Northern Lights">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="../images/user-submitted/5.png" style="width:99%" onclick="currentSlide(5)" alt="Nature and sunrise">
+      <img class="demo cursor" src="images/user-submitted/5.png" style="width:99%" onclick="currentSlide(5)" alt="Nature and sunrise">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="../images/user-submitted/6.png" style="width:99%" onclick="currentSlide(6)" alt="Snowy Mountains">
+      <img class="demo cursor" src="images/user-submitted/6.png" style="width:99%" onclick="currentSlide(6)" alt="Snowy Mountains">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="../images/user-submitted/7.png" style="width:99%" onclick="currentSlide(6)" alt="7">
+      <img class="demo cursor" src="images/user-submitted/7.png" style="width:99%" onclick="currentSlide(7)" alt="7">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="../images/user-submitted/8.jpg" style="width:99%" onclick="currentSlide(6)" alt="8">
+      <img class="demo cursor" src="images/user-submitted/8.jpg" style="width:99%" onclick="currentSlide(8)" alt="8">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="../images/user-submitted/9.png" style="width:99%" onclick="currentSlide(6)" alt="9">
+      <img class="demo cursor" src="images/user-submitted/9.png" style="width:99%" onclick="currentSlide(9)" alt="9">
     </div>
   </div>
-  <a class="tb-prev" onclick="plusThumbnails(-1)">&#10094;</a>
+  <a class="tb-prev" onclick="backThumbnails(-1)">&#10094;</a>
   <a class="tb-next" onclick="plusThumbnails(1)">&#10095;</a>
 </div>
 
