--- a/gallery.html
+++ b/gallery.html
@@ -208,7 +208,7 @@ function showThumbnails() {
 </script>
 <body>
 <!-- Navbar (sit on top) -->
-<div class="w3-top w3-dark-gray navbar">
+<div class="w3-top w3-black navbar">
   <div class="w3-bar header-color w3-card" id="myNavbar">
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
@@ -319,5 +319,15 @@ showSlides(slideIndex);
 showThumbnails()
 </script>
 
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+  <div class="w3-large w3-section">
+    <p>Find us here: 
+    <a href="https://www.paypal.com/pools/c/8wQQHzXwod"><i class="fa fa-paypal w3-hover-opacity"></i></a>
+    <a href="https://www.patreon.com/1ID/posts"><i class="fa fa-dollar w3-hover-opacity"></i></a>
+    <a href="https://discord.gg/mNfRdMBsmS"><i class="fa fa-microphone w3-hover-opacity"></i></a>
+  </p>
+  </div>
+</footer>
 </body>
 </html>
