--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ body, html {
   <h4>After a new recruit indicates they'd like to join on our Discord server, they will be scheduled for basic training. Basic training ensures all members have a basic understanding of the game and have an idea of what to expect when operating in 1ID. This training takes about 15 to 20 minutes. Afterwards recruits will be promoted and be considered a member of 1ID.</h4>
   <br >
   <p class="w3-center w3-large">If you're interested in joining or want to come hang out, <a href="https://discord.gg/Pan4yK959F">join us at our Discord!</a></p>
-  <p class="w3-center w3-large">If you want to support us, we have a <a href="https://www.patreon.com/1ID/posts">Patreon</a> and <a href="https://www.paypal.com/pools/c/8wQQHzXwod ">PayPal</a>. </p>
+  <p class="w3-center w3-large">If you want to support us, we have a <a href="https://www.patreon.com/1ID/posts">Patreon</a> and <a href="https://www.paypal.com/pools/c/8wQQHzXwod">PayPal</a>. </p>
 </div>
 
 <!-- Third Parallax Image with Portfolio Text -->
@@ -175,9 +175,9 @@ window.onscroll = function() {myFunction()};
 function myFunction() {
     var navbar = document.getElementById("myNavbar");
     if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-dark-gray";
+        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-black";
     } else {
-        navbar.className = navbar.className.replace(" w3-card w3-animate-top  w3-dark-gray", "");
+        navbar.className = navbar.className.replace(" w3-card w3-animate-top  w3-black", "");
     }
 }
 
@@ -192,5 +192,15 @@ function toggleFunction() {
 }
 </script>
 
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+  <div class="w3-large w3-section">
+    <p>Find us here: 
+    <a href="https://www.paypal.com/pools/c/8wQQHzXwod"><i class="fa fa-paypal w3-hover-opacity"></i></a>
+    <a href="https://www.patreon.com/1ID/posts"><i class="fa fa-dollar w3-hover-opacity"></i></a>
+    <a href="https://discord.gg/mNfRdMBsmS"><i class="fa fa-microphone w3-hover-opacity"></i></a>
+  </p>
+  </div>
+</footer>
 </body>
 </html>
