Added captions to the existing images.

--- a/gallery.html
+++ b/gallery.html
@@ -282,31 +282,31 @@ function showThumbnails() {
   <!-- Thumbnail images -->
   <div class="row w3-padding-16">
     <div class="column myThumbnails">
-      <img class="demo cursor" src="images/user-submitted/1.png" style="width:99%" onclick="currentSlide(1)" alt="The Woods">
+      <img class="demo cursor" src="images/user-submitted/1.png" style="width:99%" onclick="currentSlide(1)" alt="Is he parked on this guy? I cant tell..">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="images/user-submitted/2.png" style="width:99%" onclick="currentSlide(2)" alt="Cinque Terre">
+      <img class="demo cursor" src="images/user-submitted/2.png" style="width:99%" onclick="currentSlide(2)" alt="Beautiful landing cam photo of some sand.">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="images/user-submitted/3.png" style="width:99%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      <img class="demo cursor" src="images/user-submitted/3.png" style="width:99%" onclick="currentSlide(3)" alt="Are they touching tips? Is that whats happening?">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="images/user-submitted/4.jpg" style="width:99%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="images/user-submitted/4.jpg" style="width:99%" onclick="currentSlide(4)" alt="How did this even happen? I want to hear the story.">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="images/user-submitted/5.png" style="width:99%" onclick="currentSlide(5)" alt="Nature and sunrise">
+      <img class="demo cursor" src="images/user-submitted/5.png" style="width:99%" onclick="currentSlide(5)" alt="Deadman giving a thumbsup. (I think)">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="images/user-submitted/6.png" style="width:99%" onclick="currentSlide(6)" alt="Snowy Mountains">
+      <img class="demo cursor" src="images/user-submitted/6.png" style="width:99%" onclick="currentSlide(6)" alt="Riot as a pacifist, I guess.">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="images/user-submitted/7.png" style="width:99%" onclick="currentSlide(7)" alt="7">
+      <img class="demo cursor" src="images/user-submitted/7.png" style="width:99%" onclick="currentSlide(7)" alt="Drivers cant see shit..">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="images/user-submitted/8.jpg" style="width:99%" onclick="currentSlide(8)" alt="8">
+      <img class="demo cursor" src="images/user-submitted/8.jpg" style="width:99%" onclick="currentSlide(8)" alt="I don't understand.">
     </div>
     <div class="column myThumbnails">
-      <img class="demo cursor" src="images/user-submitted/9.png" style="width:99%" onclick="currentSlide(9)" alt="9">
+      <img class="demo cursor" src="images/user-submitted/9.png" style="width:99%" onclick="currentSlide(9)" alt="I still don't understand.">
     </div>
   </div>
   <a class="tb-prev" onclick="backThumbnails(-1)">&#10094;</a>
