Formatting and adding descriptions to commands

--- a/admincommands.html
+++ b/admincommands.html
@@ -53,15 +53,22 @@ body, html {
 </div>
 
 <div class="container">
-  <h2>Useful Server Commands:</h2>
+  <h2><b><u>Useful Server Commands:</u></b></h2>
+  <h6>https://squad.fandom.com/wiki/Server_Administration#Admin_Access_Levels</h6><br>
+  <h3><b><u>Hotkeys:</u></b></h3>
+  <p><b>SHIFT + P:</b> Enables AdminCam.</p><br>
 
-  <h4>AdminForceAllRoleAvailability</h4>
-  <h4>AdminDisableVehicleKitRequirement</h4>
-  <h4>AdminDisableVehicleTeamRequirement</h4>
+  <h3><b><u>Console Commands:</u></b> (accessed by hitting <b>`</b> )</h3>
+  <p><b>Note:</b> Below commands must include a '0' or '1' at the end (ie. 'AdminForceAllRoleAvailability 0' or 'AdminForceAllRoleAvailability 1')</p>
+  <p><b>AdminForceAllRoleAvailability 1:</b> Allows players to choose whichever kit they want.</p>
+  <p><b>AdminDisableVehicleKitRequirement 1:</b> Allows players to access vehicles that have kit requirements (Pilot / Crewman vehicles)</p>
+  <p><b>AdminDisableVehicleTeamRequirement 1:</b> Allows players to access any vehicle, including enemy vehicles.</p>
+
+  
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
+<footer class="w3-center w3-black w3-padding-16 w3-bottom">
   <div class="w3-large w3-section">
     <p>Find us here: 
     <a href="https://www.paypal.com/pools/c/8wQQHzXwod"><i class="fa fa-paypal w3-hover-opacity"></i></a>
