Adding url link

--- a/serveradmin.html
+++ b/serveradmin.html
@@ -54,7 +54,7 @@ body, html {
 
 <div class="container">
   <h2><b><u>Useful Server Commands:</u></b></h2>
-  <h6>https://squad.fandom.com/wiki/Server_Administration#Admin_Access_Levels</h6><br>
+  <h6><a href="https://squad.fandom.com/wiki/Server_Administration#Admin_Access_Levels">https://squad.fandom.com/wiki/Server_Administration#Admin_Access_Levels</a></h6><br>
   <h3><b><u>Hotkeys:</u></b></h3>
   <p><b>SHIFT + P:</b> Enables AdminCam.</p><br>
 
