--- a/serveradmin.html
+++ b/serveradmin.html
@@ -55,36 +55,55 @@ body, html {
 <div class="container">
   <h2><b><u>Useful Server Commands:</u></b></h2>
   <h6><a href="https://squad.fandom.com/wiki/Server_Administration#Admin_Access_Levels">https://squad.fandom.com/wiki/Server_Administration#Admin_Access_Levels</a></h6><br>
+
   <h3><b><u>Hotkeys:</u></b></h3>
   <p><b>SHIFT + P:</b> Enables AdminCam.</p><br>
 
-  <h3><b><u>Server Console Commands:</u></b> (accessed by hitting <b>`</b> in the server)</h3>
-
+  <h3><b><u>General Server Commands:</u></b> (accessed by hitting <b>`</b> in the server)</h3>
   <p><b>AdminForceAllRoleAvailability <i>[0 / 1]</i>:</b> Allows players to choose whichever kit they want.</p>
-  <p><b>AdminDisableVehicleKitRequirement <i>[0 / 1]</i>:</b> Allows players to access vehicles that have kit requirements (Pilot / Crewman vehicles)</p>
-  <p><b>AdminDisableVehicleTeamRequirement <i>[0 / 1]</i>:</b> Allows players to access any vehicle, including enemy vehicles.</p>
-  <p><b>AdminKick <i>[NameOrSteamId] [KickReason]</i>:</b> Kicks a player with a reason.</p> 
-  <p><b>AdminBan <i>[NameOrSteamId] [BanLength] [BanReason]</i>:</b> Bans a player for a specified time length with a reason.</p>   
+  <p><b>AdminAlwaysValidPlacement <i>[0 / 1]</i>:</b> Allows deployables to be placed anywhere without any restrictions whatsoever.</p>
+  <p><b>AdminNoTeamChangeTimer <i>[0 / 1]</i>:</b> Disable Team change timer.</p>
+  <p><b>AdminNoRespawnTimer <i>[0 / 1]</i>:</b> Disable Team change timer.</p>
+  <p><b>DebugToggleGodMode:</b> Enables/disabled GodMode.</p>
   <p><b>AdminBroadcast <i>[Message]</i>:</b> Send a message to the entire server. (the yellow messages that shows up in the top center)</p>
-  <p><b>AdminEndMatch:</b> Ends the match.</p>    
+  <p><b>AdminWarn <i>[NameOrSteamId] [WarnReason]</i>:</b> Send a warning message to the specified player.</p>
+  
+
+  <h3><b><u>Server Time/Layer Commands:</u></b></h3>
+  <p><b>AdminEndMatch:</b> Ends the match.</p>  
+  <p><b>AdminRestartMatch:</b> Restarts the match.</p>    
   <p><b>AdminPauseMatch:</b> Pauses the match.</p>    
-  <p><b>AdminUnpauseMatch:</b> Unpauses the match.</p>    
+  <p><b>AdminUnpauseMatch:</b> Unpauses the match.</p>  
+  <p><b>AdminSlomo <i>[TimeDilation]</i>:</b> Sets the server speed to the specified multiplier. 1 is normal. .5 is half-speed. 2 is double speed.</p>   
   <p><b>AdminChangeLayer <i>[LayerName]</i>:</b> Changes the layer to the specific map/layer.</p>
   <p><b>AdminSetNextLayer <i>[LayerName]</i>:</b> Sets the next layer to the specified map/layer.</p>
-  <p><b>AdminSlomo <i>[TimeDilation]</i>:</b> Sets the server speed to the specified multiplier. 1 is normal. .5 is half-speed. 2 is double speed.</p> 
-  <p><b>AdminForceTeamChange <i>[NameOrSteamId]</i>:</b> Forces the specified player to the opposite team.</p>
+  
+  <h3><b><u>Player-related Commands:</u></b></h3>
   <p><b>AdminDemoteCommander <i>[PlayerName]</i>:</b> Demotes the specified player from the Commander position.</p>
   <p><b>AdminDisbandSquad <i>[TeamNumber] [SquadIndex]</i>:</b> Disbands the specified squad from the specified team.</p>
   <p><b>AdminRemovePlayerFromSquad <i>[PlayerName]</i>:</b> Removes the specified player from their squad.</p>
-  <p><b>AdminWarn <i>[NameOrSteamId] [WarnReason]</i>:</b> Send a warning message to the specified player.</p>
+  <p><b>AdminForceTeamChange <i>[NameOrSteamId]</i>:</b> Forces the specified player to the opposite team.</p>
+  <p><b>AdminKick <i>[NameOrSteamId] [KickReason]</i>:</b> Kicks a player with a reason.</p> 
+  <p><b>AdminBan <i>[NameOrSteamId] [BanLength] [BanReason]</i>:</b> Bans a player for a specified time length with a reason.</p>  
+  <p><b>AdminTeleportToPlayer <i>[PlayerName]</i>:</b> Teleports to the specified player.</p>  
+
+
+  <h3><b><u>Vehicles/Deployable Commands:</u></b></h3>
   <p><b>AdminCreateVehicle <i>[VehicleLink]</i>:</b> Spawns in specified vehicle at the admins location.</p>
   <p><b>AdminCreateDeployable <i>[DeployableLink]</i>:</b> Spawns in specified deployable at the admins location.</p><br>
-
-  <h3><b><u>Common Vehicles/Deployable Commands:</u></b></h3>
+  <p><b>AdminDisableVehicleKitRequirement <i>[0 / 1]</i>:</b> Allows players to access vehicles that have kit requirements (Pilot / Crewman vehicles)</p>
+  <p><b>AdminDisableVehicleTeamRequirement <i>[0 / 1]</i>:</b> Allows players to access any vehicle, including enemy vehicles.</p>
+  <p><b>AdminDisableVehicleClaiming <i>[0 / 1]</i>:</b> Allows players to claim a vehicle withour SL permission.</p>
+  <br>
   <p><b>Logistics Truck:</b> AdminCreateVehicle /Game/Vehicles/Ural4320/BP_Ural_4320_logi.BP_Ural_4320_logi_C</p> 
   <p><b>Helicopter:</b> AdminCreateVehicle /Game/Vehicles/UH60M/BP_UH60.BP_UH60_C</p> 
   <p><b>MBT:</b> AdminCreateVehicle /game/vehicles/M1A2/BP_M1A2_woodland.BP_M1A2_woodland_C</p> 
   <p><b>Ammo Crate:</b> AdminCreateDeployable /Game/Gameplay/Deployables/BP_Ammocrate.BP_Ammocrate_C</p> 
+
+
+  <h3><b><u>Need to Test:</u></b></h3>
+  <p><b>AdminSetFogOfWar <i>[0 / 1]</i>:</b> Sets the fog of war active in the match.</p>
+  
 
   <br><br><br><br><br>
 </div>
