--- a/serveradmin.html
+++ b/serveradmin.html
@@ -58,8 +58,9 @@ body, html {
 
   <h3><b><u>Hotkeys:</u></b></h3>
   <p><b>SHIFT + P:</b> Enables AdminCam.</p><br>
+  <p><b>'</b> Opens the server console.</p><br>
 
-  <h3><b><u>General Server Commands:</u></b> (accessed by hitting <b>`</b> in the server)</h3>
+  <h3><b><u>General Server Commands:</u></b></h3>
   <p><b>AdminForceAllRoleAvailability <i>[0 / 1]</i>:</b> Allows players to choose whichever kit they want.</p>
   <p><b>AdminAlwaysValidPlacement <i>[0 / 1]</i>:</b> Allows deployables to be placed anywhere without any restrictions whatsoever.</p>
   <p><b>AdminNoTeamChangeTimer <i>[0 / 1]</i>:</b> Disable Team change timer.</p>
