--- a/serveradmin.html
+++ b/serveradmin.html
@@ -57,7 +57,7 @@ body, html {
   <h6><a href="https://squad.fandom.com/wiki/Server_Administration#Admin_Access_Levels">https://squad.fandom.com/wiki/Server_Administration#Admin_Access_Levels</a></h6><br>
 
   <h3><b><u>Hotkeys:</u></b></h3>
-  <p><b>SHIFT + P:</b> Enables AdminCam.</p><br>
+  <p><b>SHIFT + P:</b> Enables AdminCam.</p>
   <p><b>'</b> Opens the server console.</p><br>
 
   <h3><b><u>General Server Commands:</u></b></h3>
