--- a/serveradmin.html
+++ b/serveradmin.html
@@ -91,7 +91,7 @@ body, html {
 
   <h3><b><u>Vehicles/Deployable Commands:</u></b></h3>
   <p><b>AdminCreateVehicle <i>[VehicleLink]</i>:</b> Spawns in specified vehicle at the admins location.</p>
-  <p><b>AdminCreateDeployable <i>[DeployableLink]</i>:</b> Spawns in specified deployable at the admins location.</p><br>
+  <p><b>AdminCreateDeployable <i>[DeployableLink]</i>:</b> Spawns in specified deployable at the admins location.</p>
   <p><b>AdminDisableVehicleKitRequirement <i>[0 / 1]</i>:</b> Allows players to access vehicles that have kit requirements (Pilot / Crewman vehicles)</p>
   <p><b>AdminDisableVehicleTeamRequirement <i>[0 / 1]</i>:</b> Allows players to access any vehicle, including enemy vehicles.</p>
   <p><b>AdminDisableVehicleClaiming <i>[0 / 1]</i>:</b> Allows players to claim a vehicle withour SL permission.</p>
