--- a/serveradmin.html
+++ b/serveradmin.html
@@ -58,7 +58,7 @@ body, html {
 
   <h3><b><u>Hotkeys:</u></b></h3>
   <p><b>SHIFT + P:</b> Enables AdminCam.</p>
-  <p><b>'</b> Opens the server console.</p><br>
+  <p><b>' :</b> Opens the server console.</p><br>
 
   <h3><b><u>General Server Commands:</u></b></h3>
   <p><b>AdminForceAllRoleAvailability <i>[0 / 1]</i>:</b> Allows players to choose whichever kit they want.</p>
