--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ body, html {
   background-color: #c4c4c4
 }
 
-.redbg {
-  background-color: #5f0b0b
+.regiment-padding {
+  padding: 0px 20px 0px 20px;
 }
 
 /* Create a Parallax Effect */
@@ -143,12 +143,15 @@ body, html {
   </div>
 </div>
 
-<div class="w3-container w3-row w3-center w3-padding-16">
-  <div class="w3-third w3-section">
+<div class="w3-row w3-center w3-padding-16">
+  <div class="w3-third w3-section regiment-padding">
+    <p>If you want to become a part of a 9man Squad where your Squad Leader and Fire Team Leaders direct you towards victory, join the Infantry regiment! You'll find yourself advancing towards a city with supporting armor, manuevering around a ridge to flank the enemy or even sitting in a logistics truck with your squadmates hoping your driver doesn't somehow get you all killed again. Every match is sure to consist of plenty of running, shooting and friendly banter in Squad comms.</p>
   </div>
-  <div class="w3-third w3-section">
+  <div class="w3-third w3-section regiment-padding">
+    <p>If rifles and RPGs aren't big enough toys for you, join the Armor regiment! Load up into a giant killing-machine where proper coordination between driver and gunner will ultimately decide your fate. The Armor regiment is responsible for keeping the Infantry and Aviation squadrons alive - don't let that enemy vehicle mow down your Infantry.. that's your job! Establish dominance over the enemy team and ultimately lead your team to victory.</p>
   </div>
-  <div class="w3-third w3-section">
+  <div class="w3-third w3-section regiment-padding">
+    <p>If you're a pilot and want to earn your wings (and out rank the majority of clan members), join the Aviation regiment! Not every pilot has the skills to pull land with a helicopter full of logistics supplies and infantry near the frontlines. Perhaps you're just tired of seeing all of those helicopters pilots flying towards enemy tanks like a moth to a flame. Pilots in the Aviation regiments will become J-hook landing masters, as well as landing troops and providing critical supplies for the Infantry and Armor squads. </p>
   </div>
 </div>
 
