--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ body, html {
     <p>If rifles and RPGs aren't big enough toys for you, join the Armor regiment! Load up into a giant killing-machine where proper coordination between driver and gunner will ultimately decide your fate. The Armor regiment is responsible for keeping the Infantry and Aviation squadrons alive - don't let that enemy vehicle mow down your Infantry.. that's your job! Establish dominance over the enemy team and ultimately lead your team to victory.</p>
   </div>
   <div class="w3-third w3-section regiment-padding">
-    <p>If you're a pilot and want to earn your wings (and out rank the majority of clan members), join the Aviation regiment! Not every pilot has the skills to pull land with a helicopter full of logistics supplies and infantry near the frontlines. Perhaps you're just tired of seeing all of those helicopters pilots flying towards the nearest tree like a moth to a flame. Pilots in the Aviation regiments will become J-hook landing masters, as well as landing troops and providing critical supplies for the Infantry and Armor squads. </p>
+    <p>If you're a pilot and want to earn your wings (and out rank the majority of clan members), join the Aviation regiment! Perhaps you're just tired of seeing all of those helicopters pilots flying towards the nearest tree like a moth to a flame. Not every pilot has the skills to quickly land with a helicopter full of logistics supplies and infantry near the frontlines. Pilots in the Aviation regiments will become J-hook landing masters, as well as landing troops and providing critical supplies for the Infantry and Armor squads. </p>
   </div>
 </div>
 
