--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ body, html {
 
 <div class="w3-row w3-center w3-padding-16">
   <div class="w3-third w3-section regiment-padding">
-    <p>If you want to become a part of a 9man Squad where your Squad Leader and Fire Team Leaders direct you towards victory, join the Infantry regiment! You'll find yourself advancing towards a city with supporting armor, manuevering around a ridge to flank the enemy or even sitting in a logistics truck with your squadmates hoping your driver doesn't somehow get you all killed again. Every match is sure to consist of plenty of running, shooting and friendly banter in Squad comms.</p>
+    <p>If you want to become a part of a 9man Squad where your Squad Leader and Fire Team Leaders direct you towards victory, join the Infantry regiment! You'll find yourself advancing towards a city with supporting armor, manuevering around a ridge to flank the enemy or even sitting in a logistics truck with your squadmates hoping your driver doesn't somehow get you all killed again. Every game is sure to consist of plenty of running, shooting and friendly banter in comms.</p>
   </div>
   <div class="w3-third w3-section regiment-padding">
     <p>If rifles and RPGs aren't big enough toys for you, join the Armor regiment! Load up into a giant killing-machine where proper coordination between driver and gunner will ultimately decide your fate. The Armor regiment is responsible for protecting the Infantry and Aviation squads - don't let that enemy vehicle mow down your Infantry.. that's your job! Establish dominance over the enemy team and ultimately lead your team to victory.</p>
